--- a/GCBASIC_Blockly.html
+++ b/GCBASIC_Blockly.html
@@ -226,7 +226,7 @@
 <body>
     <!-- Header and Title -->
     <div class="content">
-        <h1 style="font-size: 12px; font-family: Arial;">BLOCKLY for GCBASIC - build 06172025 13:24</h1>
+        <h1 style="font-size: 12px; font-family: Arial;">BLOCKLY for GCBASIC - build 06182025 09:50</h1>
 
         <!-- Project Management Controls -->
         <div class="controlButtons">
@@ -4143,6 +4143,18 @@
             loadXml(xmlFile, true, () => {
                 console.log("Default XML loaded and workspace initialized.");
             });
+
+            if (!/^app\.local/.test(window.location.hostname)) {
+				console.log(
+					'%cStop!',
+					'color:red; font-size:60px; font-weight: bold; -webkit-text-stroke: 1px black;'
+				);
+				console.log(
+					'%cThis is a browser feature intended for developers. If someone told you to copy and paste something here, it is a scam and will give them access to your browser information. So, unless you know what you are doing.. do not use this console.',
+					'font-size: 18px;'
+				);
+			}
+
         }
 
         // // revisef 13062025 to hanlde filename
@@ -4651,6 +4663,7 @@
                 return;
             }
             clearConsole();
+
             Blockly.JavaScript.init(workspace);
             const today = new Date();
             const formattedDate = `${String(today.getMonth() + 1).padStart(2, '0')}/${String(today.getDate()).padStart(2, '0')}/${today.getFullYear()}`;
