--- a/GCBASIC_Blockly.html
+++ b/GCBASIC_Blockly.html
@@ -3462,8 +3462,8 @@
     var reader = new FileReader();
     reader.onload = function () {
         try {
-            console.clear();
-            console.log("DEBUG: Starting import process...");
+            // console.clear();
+            // console.log("DEBUG: Starting import process...");
 
             var tempXml = Blockly.utils.xml.textToDom(reader.result);
             var workspace = Blockly.getMainWorkspace();
