--- a/GCBASIC_Blockly.html
+++ b/GCBASIC_Blockly.html
@@ -3955,7 +3955,7 @@
             xmlTextPromise
                 .then(xmlText => {
                     try {
-                        console.clear();
+                        // console.clear();
                         // console.log("DEBUG: Starting XML load process...");
 
                         const tempXml = Blockly.utils.xml.textToDom(xmlText);
